[gd_scene load_steps=14 format=2]

[ext_resource path="res://ImagePanel.gd" type="Script" id=1]
[ext_resource path="res://SplitPng.gd" type="Script" id=2]
[ext_resource path="res://OverlayGrid.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.109804, 0.109804, 0.109804, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.219608, 0.219608, 0.219608, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.152941, 0.152941, 0.152941, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.141176, 0.141176, 0.141176, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.141176, 0.141176, 0.141176, 1 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )

[sub_resource type="Theme" id=9]
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )
LineEdit/styles/focus = SubResource( 6 )
LineEdit/styles/normal = SubResource( 7 )
PanelContainer/styles/panel = SubResource( 8 )

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.180392, 0.180392, 0.180392, 1 )

[node name="SplitPng" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 9 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 1018.0
margin_bottom = 594.0

[node name="VBoxContainer" type="PanelContainer" parent="HBoxContainer"]
margin_right = 216.0
margin_bottom = 588.0
custom_styles/panel = SubResource( 10 )

[node name="Options" type="GridContainer" parent="HBoxContainer/VBoxContainer"]
margin_left = 6.0
margin_top = 242.0
margin_right = 210.0
margin_bottom = 346.0
size_flags_horizontal = 3
size_flags_vertical = 4
columns = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Options"]
margin_top = 4.0
margin_right = 128.0
margin_bottom = 18.0
text = "Number of Rows"

[node name="RowCount" type="SpinBox" parent="HBoxContainer/VBoxContainer/Options"]
margin_left = 132.0
margin_right = 204.0
margin_bottom = 22.0
min_value = 1.0
value = 1.0

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/Options"]
margin_top = 30.0
margin_right = 128.0
margin_bottom = 44.0
text = "Number of Columns"

[node name="ColumnCount" type="SpinBox" parent="HBoxContainer/VBoxContainer/Options"]
margin_left = 132.0
margin_top = 26.0
margin_right = 204.0
margin_bottom = 48.0
min_value = 1.0
value = 1.0

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer/Options"]
margin_top = 56.0
margin_right = 128.0
margin_bottom = 70.0
text = "Pages to Export"

[node name="ExportCount" type="SpinBox" parent="HBoxContainer/VBoxContainer/Options"]
margin_left = 132.0
margin_top = 52.0
margin_right = 204.0
margin_bottom = 74.0
min_value = 1.0
value = 1.0

[node name="ExportButton" type="Button" parent="HBoxContainer/VBoxContainer/Options"]
margin_top = 78.0
margin_right = 128.0
margin_bottom = 104.0
disabled = true
text = "Export"

[node name="ImagePanel" type="Panel" parent="HBoxContainer"]
margin_left = 220.0
margin_right = 1012.0
margin_bottom = 588.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 10 )
script = ExtResource( 1 )

[node name="Message" type="Label" parent="HBoxContainer/ImagePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Drop Image Here"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SourceImage" type="TextureRect" parent="HBoxContainer/ImagePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/ImagePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverlayGrid" type="GridContainer" parent="HBoxContainer/ImagePanel/CenterContainer"]
margin_left = 396.0
margin_top = 294.0
margin_right = 396.0
margin_bottom = 294.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
script = ExtResource( 3 )
